# Avatar-Video

./: app.py  download_models.sh  main.ipynb  musetalk_pipeline.py  pyproject.toml
configs/inference/: realtime.yaml  test.yaml
scripts/: inference.py  realtime_inference.py
