[project]
name = "avatar-video"
version = "0.1.0"
description = "Audio-driven lip-sync pipeline for InterVyu.ai — powered by MuseTalk"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "diffusers==0.30.2",
    "accelerate==0.28.0",
    "transformers==4.39.2",
    "huggingface-hub==0.30.2",
    "numpy==1.23.5",
    "opencv-python==4.9.0.80",
    "soundfile==0.12.1",
    "librosa==0.11.0",
    "einops==0.8.1",
    "gradio==5.24.0",
    "omegaconf",
    "ffmpeg-python",
    "moviepy",
    "imageio[ffmpeg]",
    "gdown",
    "requests",
]

[project.optional-dependencies]
# MMLab deps must be installed via `mim` after this (see README)
# mim install mmengine "mmcv==2.0.1" "mmdet==3.1.0" "mmpose==1.1.0"
dev = [
    "ipykernel",
    "jupyter",
]

[tool.uv]
# This is a scripts project, not an installable package
package = false
# Use CPU/MPS wheels on macOS; swap index for CUDA on Linux:
#   uv sync --extra-index-url https://download.pytorch.org/whl/cu118
